# frankenline

./: Cargo.toml  Frankenline.postman_collection.json  LICENSE  README.md  frankenline.toml  key-bindings.zsh
src/: error.rs  lib.rs
src/config/: defaults.rs  error.rs  errors.rs  hocon.rs  loader.rs  mod.rs  model.rs  postman.rs  toml.rs  yaml.rs
src/parser/: mod.rs  postman.rs
src/selector/: args_selector.rs  fzf_selector.rs  mod.rs
tests/: frankenline.hocon  frankenline.toml  frankenline.yml  integration_test.rs  integration_test.toml
