[package]
name = "frankenline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.59" }
toml = { version = "0.5.8" }

[lib]
name = "frankenline"
path = "src/lib.rs"

[[bin]]
name = "frankenline"
path = "src/bin/main.rs"
