[package]
name = "frankenline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "4.0.0"
hocon = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.21"
toml = "0.5.8"

[lib]
name = "frankenline"
path = "src/lib.rs"

[[bin]]
name = "frankenline"
path = "src/bin/main.rs"
